# bcs

./: .dockerignore  .gitattributes  .gitignore  BCS log  README.md  Skorpon_Szczur_1.json  bcs_setup.sh  docker-compose.yml  pyproject.toml  requirements.txt  sources_to_models.py
bcs/: backup.sql  baza.sql  baza_pre_app_name_change.sql  count  database.sql  entrypoint.prod.sh  manage.py  osoby_osoba_recover_script.sql  pyproject.toml  sources_to_models.py  test_mirror_dump.sql
bcs/baza/: baza.sql
bcs/bcs/: asgi.py  settings.py  urls.py  wsgi.py
bcs/core/: admin.py  admin_imports.py  apps.py  autocomplete_urls.py  forms.py  inlines.py  models.py  models_dict.py  urls.py  views.py
bcs/czapki/: admin.py  apps.py  autocomplete_urls.py  forms.py  model_imports.py  models.py  models_dict.py  views.py
bcs/czlonkowie/: admin.py  apps.py  autocomplete_urls.py  forms.py  inlines.py  models.py  models_dict.py  urls.py  views.py  widgets.py
bcs/dashboard/: admin.py  autocomplete_urls.py  autocomplete_views.py  forms.py  models.py  urls.py  utils.py  views.py
bcs/docs/: TODO
bcs/dokumenty/: admin.py  apps.py  autocomplete_urls.py  forms.py  models.py  models_dict.py  urls.py  views.py
bcs/drzewo/: apps.py  autocomplete_urls.py  forms.py  hardcoded_tree.py  tree_rendering.py  urls.py  views.py
bcs/encyklopedia/: admin.py  apps.py  autocomplete_urls.py  forms.py  model_imports.py  models.py  models_dict.py  urls.py  views.py
bcs/honory/: admin.py  apps.py  autocomplete_urls.py  autocomplete_views.py  forms.py  model_imports.py  models.py  models_dict.py  urls.py  views.py
bcs/kalendarz/: admin.py  apps.py  autocomplete_urls.py  autocomplete_views.py  custom_autocomplete_views.py  filters.py  forms.py  inlines.py  model_imports.py  urls.py  (+3 more)
(+754 files in other folders)
