[project]
name = "bcs"
version = "0.1.0"
description = "Encapsulating data about BCS UJ in database-form for enhanced searches and usage in applications"
authors = [{ name = "Szymon Zwias", email = "zwiasszymon@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    # --- Django and Core ---
    "Django==5.2.1",
    "django-admin-interface==0.30.0",
    "django-autocomplete-light==3.12.1",
    "django-colorfield==0.14.0",
    "django-polymorphic==4.1.0",
    "django-stubs-ext==5.2.0",
    "pillow==11.2.1",
    "python-slugify==8.0.4",
    "text-unidecode==1.3",

    # --- Template Engine ---
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",

    # --- PostgreSQL ---
    "psycopg2-binary==2.9.10",
    "sqlparse==0.5.3",

    # --- Miscellaneous ---
    "json5==0.12.0",
    "python-decouple==3.8",
    "roman==5.0"
]

[project.optional-dependencies]

# Code formatting and linting
dev = [
    # --- Black ---
    "black==25.1.0",
    "case-converter==1.2.0",
    "click==8.2.1",
    "packaging==25.0",
    "platformdirs==4.3.8",
    "pycodestyle==2.14.0",

    # --- DjLint ---
    "djlint==1.36.4",
    "colorama==0.4.6",
    "cssbeautifier==1.15.4",
    "jsbeautifier==1.15.4",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "six==1.17.0"
]

# IDE-related tools
ide = [
    "EditorConfig==0.17.1",
    "executing==2.2.0",
    "jedi==0.19.2",
    "mypy_extensions==1.1.0",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "prompt_toolkit==3.0.51",
    "pure_eval==0.2.3",
    "stack-data==0.6.3",
    "typing_extensions==4.13.2"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
